--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-
     <link
       rel="icon"
       type="image/png"
@@ -296,7 +295,7 @@
               <div class="flex-row">
                 <div class="flex-col">
                   <p class="heading--tertiary">Arcade (Monthly)</p>
-                  <a href="#" class="sub-heading">Change</a>
+                  <a href="#" class="sub-heading" id="change">Change</a>
                 </div>
                 <p class="price--medium">$9/mo</p>
               </div>
